playground/src/index.css
html {
    height: 100%;
    box-sizing: border-box;
}

body {
    display: flex;
    min-height: 100%;
}

body {
    margin: 0;
    padding: 0;
    font-family: sans-serif;
}

#root {
    display: flex;
    min-height: 100%;
    flex-grow: 1;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

button,
ul,
ol,
li,
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    padding: 0;
}

